--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "dev-blog",
   "version": "0.1.0",
   "private": false,
-  "homepage": "http://cookie777.github.io/dev-blog-r/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
@@ -19,9 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
